# hello-datacontract-cli

./: README.md  datacontract.yaml  pyproject.toml
